# ocr-medical-app

./: .gitignore  LICENSE  LICENSE.txt  README.md  main.py  pyproject.toml  setup.cfg
ocr_med/: ocr.py
ocr_med/filters/: base_class.py  generating_noise.py  image_filters.py
ocr_med/interface/: ui.py  ui_tkinter.py
ocr_med/json_functions/: file_functions.py
ocr_med/roi_label/: crop_with_tkinter.py
templates/: GCA_RA.json  IOL.json  OCTA_Density.json  OCTA_FAZ.json  OCT_Thickness.json  RNFL_RE.json
