[metadata]
name = med_ocr
version = 1.0.0
description = Download all modules and install required packages for OCR project
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = 
    numpy == 1.25.2
    opencv-python == 4.8.0.76
    imutils == 0.5.4
    pandas == 2.0.3
    pdf2image == 1.16.3
    pip == 23.2.1
    pytest == 7.4.0
    pytesseract == 0.3.10
    scikit-learn == 1.3.0
    scipy == 1.11.2
    seaborn == 0.12.2